# systems-labs

./: .gitignore  117М_Наштыков_реферат.docx
lab1/: generator.go  main.go  tasks.json
lab1/generator/: generator.go
lab1/tests/: test.go
labs2-5/: .gitignore  docker-compose.yaml
labs2-5/graphql/: docker-compose.yaml  go.mod  go.sum  main.go
labs2-5/inventory_service/: docker-compose.yaml  go.mod  main.go
labs2-5/notifications_service/: Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go
labs2-5/order_service/: docker-compose.yaml  go.mod  go.sum  main.go
labs2-5/product_service/: docker-compose.yaml  go.mod  main.go
labs2-5/product_service/migrations/: 000.sql
labs2-5/product_service_cpp/: CMakeLists.txt  Dockerfile  docker-compose.yaml  lab1.cpp
labs2-5/product_service_cpp/.devcontainer/: devcontainer.json
labs2-5/product_service_cpp/backend/: CMakeLists.txt  lab1.cpp
labs2-5/product_service_cpp/backend/cgi-app/: cgi-app.cpp  cgi-app.h
labs2-5/product_service_cpp/backend/http/: http.cpp  http.h
labs2-5/product_service_cpp/backend/utils/: utils.cpp  utils.h
labs2-5/product_service_cpp/cgi-app/: cgi-app.cpp  cgi-app.h
labs2-5/product_service_cpp/frontend/: index.html
labs2-5/product_service_cpp/http/: http.cpp  http.h
labs2-5/product_service_cpp/httpd/: my-httpd.conf
labs2-5/product_service_cpp/utils/: utils.cpp  utils.h
